src/assets/css/base.css
@import "./_tailwind.css";

@layer base {
  :root {
    @apply scroll-smooth scroll-pt-18 md:scroll-pt-28;
  }
  body {
    @apply font-sans leading-relaxed text-base;
    letter-spacing: 0.5px;
  }
  h1, h2, h3, h4, h5, h6 {
    @apply font-bold;
  }
  h1 {
    @apply text-4xl;
  }
  h2 {
    @apply text-3xl;
  }
  h3 {
    @apply text-2xl;
  }
  h4 {
    @apply text-xl;
  }
  h5 {
    @apply text-lg;
  }
  p {
    @apply leading-8;
    &:not(:last-child) {
      @apply mb-3;
    }
  }
  ul {
    @apply list-disc list-outside pl-[1.5rem] mb-2;
    li {
      @apply mb-1;
    }
  }
  ol {
    @apply list-decimal list-outside pl-[1.5rem] mb-2;
    li {
      @apply mb-1 ps-1;
    }
  }
  b, strong {
    @apply font-bold;
  }
  small {
    @apply text-sm;
  }
  button {
    @apply cursor-pointer;
  }
  button:active,
  button:focus,
  a:active,
  a:focus {
    @apply outline-none;
  }
  a:not(.btn, .nav-link) {
    &:link,
    &:visited {
      @apply text-primary;
      @apply no-underline;
      &:hover {
        @apply underline;
      }
    }
  }
  a[disabled] {
    @apply text-neutral-500! no-underline!;
  }
}

@layer utilities {
  .container {
    @apply mx-auto md:max-w-3xl lg:max-w-5xl xl:max-w-7xl px-4;
  }
  .btn {
    @apply rounded-lg px-4 py-2 cursor-pointer focus:outline-none inline-flex items-center justify-center duration-200 leading-none;
  }
  .btn-sm {
    @apply px-2 py-1 text-sm;
  }
  .btn-lg {
    @apply px-7 py-3 text-xl lg:text-2xl font-bold;
  }
  .btn-text-dark {
    @apply text-neutral-800 hover:text-primary transition-colors;
  }
  .btn-primary {
    @apply bg-primary text-white hover:bg-primary-dark;
  }
  .btn-outline-primary {
    @apply border border-primary text-primary hover:bg-primary hover:text-white;
  }
  .btn-outline-dark {
    @apply border border-neutral-500 text-neutral-500 hover:bg-neutral-500 hover:text-white;
  }
}

#burger {
  @apply w-5 h-[2.5px] bg-black rounded-full transition-all;
  &:before,
  &:after {
    content: ' ';
    @apply absolute block w-5 h-[2.5px] bg-black rounded-full;
  }
  &:before {
    animation: burger-t-Out 0.3s ease forwards;
  }
  &:after {
    animation: burger-b-Out 0.3s ease forwards;
  }
  &.is-active {
    @apply h-0;
    &:before {
      animation: burger-t-In 0.3s ease forwards;
    }
    &:after {
      animation: burger-b-In 0.3s ease forwards;
    }
  }
}

@keyframes burger-t-In {
  0% {
    transform: rotate(0deg) translateY(-7px);
  }
  50% {
    transform: translateY(0);
  }
  100% {
    transform: rotate(45deg);
  }
}

@keyframes burger-t-Out {
  0% {
    transform: rotate(45deg);
  }
  50% {
    transform: translateY(0);
  }
  100% {
    transform: rotate(0deg) translateY(-7px);
  }
}

@keyframes burger-b-In {
  0% {
    transform: rotate(0deg) translateY(-7px);
  }
  50% {
    transform: translateY(0);
  }
  100% {
    transform: rotate(-225deg);
  }
}

@keyframes burger-b-Out {
  0% {
    transform: rotate(-45deg);
  }
  50% {
    transform: translateY(0);
  }
  100% {
    transform: rotate(0deg) translateY(7px);
  }
}

#modal {
  @apply fixed left-0 top-0 w-full h-full z-50 flex items-center justify-center p-4;
  background-color: rgba(0, 0, 0, 0.5);
  backdrop-filter: blur(2px);
  transition: all 0.3s ease;
  opacity: 0;
  pointer-events: none;
  > .inner-modal {
    @apply flex flex-col bg-white min-w-80 max-w-lg;
    max-height: 100%;
    transition: all 0.3s ease;
    transform: translateY(20px);
  }
  .modal-body {
    flex: 1;
    overflow-y: auto;
    hr {
      margin: 1rem 0;
    }
  }
  &.show {
    opacity: 1;
    pointer-events: auto;
    > .inner-modal {
      transform: translateY(0);
    }
  }
}

footer {
  .rolling-list a {
    @apply text-neutral-600;
    &:hover > * {
      animation: iconMouseIn .3s ease forwards;
    }
    &:not(:hover) > * {
      animation: iconMouseOut .3s ease forwards;
    }
  }
}

@keyframes iconMouseIn {
  0% {
    transform: translateY(0);
    opacity: 1;
    color: inherit;
  }
  49% {
    opacity: 0;
    transform: translateY(-15px);
  }
  50% {
    opacity: 0;
    transform: translateY(15px);
  }
  100% {
    transform: translateY(0);
    opacity: 1;
    color: var(--color-primary);
  }
}

@keyframes iconMouseOut {
  0% {
    color: var(--color-primary);
  }
  100% {
    color: inherit;
  }
}

